# automation-engine

./: .env.example  .gitignore  CLI_CHEATSHEET.md  LICENSE  README.md  cli.py  config.py  engine.py  main.py  pyproject.toml  requirements-core.txt  requirements.txt
.github/workflows/: ci.yml
automations/: __init__.py
automations/api/: client.py  fetch.py  health.py  upload.py
automations/docker/: build.py  cleanup.py  run.py
automations/email/: sender.py  templates.py
automations/excel/: reader.py  reports.py  writer.py
automations/files/: backup.py  cleanup.py  organizer.py  watcher.py
automations/git/: commit.py  push.py  status.py
automations/kubernetes/: deploy.py  logs.py  pods.py
automations/notifications/: discord.py  email.py  slack.py
automations/reports/: csv.py  excel.py  pdf.py
automations/scheduler/: jobs.py  schedule.py
core/: constants.py  exceptions.py  helpers.py  logger.py  utils.py
docs/: api.md  architecture.md  contributing.md
scripts/: install.py  run.py  setup.py
tests/: test_api.py  test_engine.py  test_files.py
