[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-engine"
version = "0.1.0"
description = "A modular Python automation platform for educational and production use."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Instructor", email = "instructor@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]
# Team-specific optional groups
files = ["watchdog>=4.0.0"]
api = ["requests>=2.31.0", "httpx>=0.27.0"]
excel = ["openpyxl>=3.1.2", "pandas>=2.2.0"]
pdf = ["reportlab>=4.1.0"]
docker = ["docker>=7.0.0"]
git = ["GitPython>=3.1.41"]
kubernetes = ["kubernetes>=29.0.0"]
slack = ["slack-sdk>=3.27.0"]

# Full bundle for running all automations
all = [
    "watchdog>=4.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "reportlab>=4.1.0",
    "schedule>=1.2.1",
    "docker>=7.0.0",
    "GitPython>=3.1.41",
    "kubernetes>=29.0.0",
    "slack-sdk>=3.27.0",
]

[project.scripts]
automation = "main:app"

[tool.setuptools]
packages = ["automations", "core"]
py-modules = ["main", "config", "engine", "cli"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "ARG", "PTH"]
ignore = ["B008", "ARG001", "B904", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
